@@ -9,7 +9,7 @@
 	R      : http://www.r-project.org/
 	RKWard : http://rkward.sourceforge.net/
 	-->
-<language version="2.01" kateversion="2.5" name="RKWard output" section="Scripts" extensions="" mimetype="" author="P. Ecochard" license="GPL">
+<language version="2.02" kateversion="2.5" name="RKWard output" section="Scripts" extensions="" mimetype="" author="P. Ecochard" license="GPL">
 <highlighting>
 	<list name="controls">
 	<item> for </item>
@@ -28,6 +28,10 @@
 	<item> FALSE </item>
 	<item> NULL </item>
 	<item> NA </item>
+	<item> NA_integer_ </item>
+	<item> NA_real_ </item>
+	<item> NA_complex_ </item>
+	<item> NA_character_ </item>
 	<item> Inf </item>
 	<item> NaN </item>
 	</list>
@@ -127,8 +131,8 @@
 			<RegExpr attribute="Assign" context="#stay" String="=(?!=)"/>
 			
 			<!-- These operators are fine as long as they're followed by something else or end of line. Error otherwise -->
-			<RegExpr attribute="Operator" context="#stay" String="(\+|\-|\*|/|&lt;=|&gt;=|={1,2}|\!=|\|{1,2}|&amp;{1,2}|:{1,2}|\^|@|\$|~)((?!(\+|\-|\*|/|&lt;=|&gt;=|=|\!=|\||&amp;|:|\^|@|\$|~))|$)"/>
-			<RegExpr attribute="Error" context="#stay" String="(\+|\-|\*|/|&lt;=|&gt;=|={1,2}|\!=|\|{1,2}|&amp;{1,2}|:{1,2}|\^|@|\$|~){2,}"/>	
+			<RegExpr attribute="Operator" context="#stay" String="(\+|\-|\*|/|&lt;=|&gt;=|={1,2}|\!=|\|{1,2}|&amp;{1,2}|:{1,3}|\^|@|\$|~)((?!(\+|\-|\*|/|&lt;=|&gt;=|=|\!=|\||&amp;|:|\^|@|\$|~))|$)"/>
+			<RegExpr attribute="Error" context="#stay" String="(\+|\-|\*|/|&lt;=|&gt;=|={1,2}|\!=|\|{1,2}|&amp;{1,2}|:{1,3}|\^|@|\$|~){2,}"/>	
 			<RegExpr attribute="Operator" context="#stay" String="%[^%]*%"/>
 
 			<!-- Contrary to the normal R Script highlighting, we don't start a region here, but we do go into a command sub-context -->
