@@ -1,3 +1,4 @@
+- correct syntax highlighting for ::: and NA_integer_ and others
 - silence some GCC 4.2 warnings
 - fixed: crash when editing a data.frame with logicals (logicals are still mishandled, but less severe)
 - fixed: would not work with R 2.6
